RESOLVED FIXED 209943
Fix bugs related to VideoTextureCopierCV and ANGLE roll script
https://bugs.webkit.org/show_bug.cgi?id=209943
Summary Fix bugs related to VideoTextureCopierCV and ANGLE roll script
Kenneth Russell
Reported 2020-04-02 17:09:09 PDT
While rolling ANGLE forward in Issue 209689, a few preexisting bugs were uncovered in the VideoTextureCopierCV and its GL context usage that should be fixed separately, so that the ANGLE roll is completely self-contained. Also, changes to ANGLE's commit ID generation necessitated fixes to the ANGLE roll script, which would ideally also be separated in case of a revert of the ANGLE roll.
Attachments
Patch (6.78 KB, patch)
2020-04-02 18:16 PDT, Kenneth Russell
no flags
Kenneth Russell
Comment 1 2020-04-02 18:16:10 PDT
EWS Watchlist
Comment 2 2020-04-02 18:17:15 PDT
Note that there are important steps to take when updating ANGLE. See http://trac.webkit.org/wiki/UpdatingANGLE
EWS
Comment 3 2020-04-03 12:25:32 PDT
Committed r259482: <https://trac.webkit.org/changeset/259482> All reviewed patches have been landed. Closing bug and clearing flags on attachment 395331 [details].
Radar WebKit Bug Importer
Comment 4 2020-04-03 12:26:13 PDT
Note You need to log in before you can comment on or make changes to this bug.